@@ -3,8 +3,8 @@
 
   <!-- General -->
   <category>
-    <setting id="filehoster" type="enum" label="30300" lvalues="30301|30302|30303" default="0" />
-    <setting id="alt_filehoster" type="enum" label="30304" lvalues="30305|30301|30302|30303" default="0" />
+    <setting id="filehoster" type="enum" label="30300" lvalues="30301|30302|30303|30307|30308" default="0" />
+    <setting id="alt_filehoster" type="enum" label="30304" lvalues="30305|30301|30302|30303|30307|30308" default="0" />
     <setting type="sep" />
     <setting id="perpage" type="enum" label="30306" values="10|20|30|40|50" default="2" />
   </category>
@@ -18,6 +18,8 @@
     <setting id="games" type="bool" label="30313" default="false" />
     <setting id="ebooks" type="bool" label="30314" default="false" />
     <setting id="apps" type="bool" label="30315" default="false" />
+    <setting id="mobile" type="bool" label="30319" default="false" />
+    <setting id="graph" type="bool" label="30323" default="false" />
     <setting id="misc" type="bool" label="30316" default="false" />
     <setting type="sep" />
     <setting id="subcat" type="bool" label="30318" default="false" />
